k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: m-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: m-issuer
spec:
  tls:
    - hosts:
        - web.mlambda.net
        - api.mlambda.net
        - docs.mlambda.net
      secretName: interview-cert
  rules:
    - host: web.mlambda.net
      http:
        paths:
          - path: /
            backend:
              serviceName: web-svc
              servicePort: 80
    - host: api.mlambda.net
      http:
        paths:
          - path: /
            backend:
              serviceName: api-svc
              servicePort: 80
    - host: docs.mlambda.net
      http:
        paths:
          - path: /
            backend:
              serviceName: docs-svc
              servicePort: 80
